--- a/conference/LLC2019/xdp_building_block.org
+++ b/conference/LLC2019/xdp_building_block.org
@@ -379,8 +379,7 @@ AF_XDP bound to */single RX-queue id/* (for SPSC performance reasons)
 
 # Local Variables:
 # org-reveal-title-slide: "<h1 class=\"title\">%t</h1>
-# <h2 class=\"author\">Jesper Dangaard Brouer (Red Hat)<br/>
-# Magnus Karlsson (Intel)<br/></h2>
-# <h3>FOSDEM 2019<br/>Brussels, Feb 2019</h3>"
+# <h2 class=\"author\">Jesper Dangaard Brouer (Red Hat)<br/></h2>
+# <h3>LLC (Lund Linux Con)<br/>Lund, Sweden, May 2019</h3>"
 # org-export-filter-headline-functions: ((lambda (contents backend info) (replace-regexp-in-string "Slide: " "" contents)))
 # End:
