--- a/conference/LLC2019/xdp_building_block.org
+++ b/conference/LLC2019/xdp_building_block.org
@@ -5,7 +5,7 @@
 #+REVEAL_THEME: redhat
 #+REVEAL_TRANS: linear
 #+REVEAL_MARGIN: 0
-#+REVEAL_EXTRA_JS: { src: './reveal.js/js/custom-fosdem2019.js'}
+#+REVEAL_EXTRA_JS: { src: './reveal.js/js/custom-llc2019.js'}
 #+REVEAL_EXTRA_CSS: ./reveal.js/css/custom-adjust-logo.css
 #+OPTIONS: reveal_center:nil reveal_control:t reveal_history:nil
 #+OPTIONS: reveal_width:1600 reveal_height:900
