LLC2019: Hide Slide: Ongoing work via :noexport:
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/LLC2019/xdp_building_block.org
+++ b/conference/LLC2019/xdp_building_block.org
@@ -324,7 +324,7 @@ A native AF_XDP driver would be more efficient
   * E.g. NAPI is not doing busy-polling 100%, more latency variance
 
 
-* Slide: Ongoing work                                                :export:
+* Slide: Ongoing work                                              :noexport:
 
  - Upstreaming performance optimizations
  - XDP programs per queue
