LLC2019: Highlight AF_XDP use XDP_REDIRECT
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/LLC2019/xdp_building_block.org
+++ b/conference/LLC2019/xdp_building_block.org
@@ -104,7 +104,7 @@ XDP is /in-kernel/ processing.
 
 What is /AF_XDP/? (the Address Family XDP socket)
  - Hybrid *kernel-bypass* facility, move selective frames out of kernel
- - One user of the XDP_REDIRECT feature
+ - One user of the */XDP_REDIRECT/* feature
    - XDP/eBPF prog filters packets using REDIRECT into AF_XDP socket
  - Delivers raw L2 frames into userspace
 
