nxp-board: remove/reduce some warning output from dtc (Device Tree Compiler)
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/areas/arm64/board_nxp_ls1088/nxp-board03-NIC-setup.org
+++ b/areas/arm64/board_nxp_ls1088/nxp-board03-NIC-setup.org
@@ -108,167 +108,15 @@ Compiling the file:
 dtc -I dts -O dtb dpl-ls1088-2x10-2x1.dts -o dpl-ls1088-2x10-2x1.dtb
 #+end_example
 
-Warnings:
+File seems to work, but it give some warnings (reduced output):
 #+begin_example
 $ dtc -I dts -O dtb dpl-ls1088-2x10-2x1.dts -o dpl-ls1088-2x10-2x1.dtb
 dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /containers/dprc@1: node has a unit name, but no reg property
 dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /containers/dprc@1/objects/obj_set@dpbp: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /containers/dprc@1/objects/obj_set@dpcon: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /containers/dprc@1/objects/obj_set@dpio: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /containers/dprc@1/objects/obj_set@dpmac: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /containers/dprc@1/objects/obj_set@dpmcp: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /containers/dprc@1/objects/obj_set@dpni: node has a unit name, but no reg property
+[...]
 dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpbp@0: node has a unit name, but no reg property
 dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpbp@1: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpbp@2: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpbp@3: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpbp@4: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpbp@5: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpbp@6: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpbp@7: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpbp@8: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpbp@9: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpbp@10: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpbp@11: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpbp@12: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpbp@13: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@0: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@1: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@2: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@3: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@4: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@5: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@6: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@7: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@8: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@9: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@10: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@11: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@12: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@13: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@14: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@15: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@16: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@17: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@18: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@19: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@20: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@21: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@22: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@23: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@24: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@25: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@26: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@27: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@28: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@29: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@30: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@31: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@32: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@33: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@34: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@35: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@36: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@37: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@38: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@39: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@40: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@41: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@42: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@43: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@44: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@45: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@46: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@47: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@48: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@49: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@50: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@51: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@52: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@53: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@54: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@55: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@56: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@57: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@58: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@59: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@60: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@61: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@62: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@63: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@64: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@65: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@66: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@67: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@68: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@69: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@70: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@71: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@72: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@73: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@74: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@75: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@76: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@77: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@78: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@79: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@80: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpcon@81: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpio@0: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpio@1: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpio@2: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpio@3: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpio@4: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpio@5: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpio@6: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpio@7: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmac@1: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmac@2: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmac@3: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmac@4: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmac@5: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmac@6: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmac@7: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmac@8: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmcp@1: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmcp@2: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmcp@3: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmcp@4: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmcp@5: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmcp@6: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmcp@7: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmcp@8: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmcp@9: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmcp@10: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmcp@11: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmcp@12: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmcp@13: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmcp@14: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmcp@15: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmcp@16: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmcp@17: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmcp@18: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmcp@19: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmcp@20: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmcp@21: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmcp@22: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmcp@23: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmcp@24: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmcp@25: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmcp@26: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmcp@27: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmcp@28: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmcp@29: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmcp@30: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmcp@31: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpmcp@32: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpni@0: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpni@1: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpni@2: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /objects/dpni@3: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /connections/connection@1: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /connections/connection@2: node has a unit name, but no reg property
-dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /connections/connection@3: node has a unit name, but no reg property
+[...]
 dpl-ls1088-2x10-2x1.dtb: Warning (unit_address_vs_reg): /connections/connection@4: node has a unit name, but no reg property
 #+end_example
 
